	* Voice/Video call window adapts correctly to adding or removing
	  streams on the fly. (Jakub Adam) (half of #13535)
	* Don't cancel an ongoing call when rejecting the addition of a
	  stream to the existing call. (Jakub Adam) (#13537)
	* Pidgin plugins can now override tab completion and detect clicks on
	  usernames in the chat userlist. (kawaii.neko) (#12599)

	libpurple:
	* media: Allow obtaining active local and remote candidates. (Jakub
	  Adam) (#11830)
	* media: Allow getting/setting video capabilities. (Jakub Adam) (half
	  of #13095)
	* Simple Silence Suppression is optional per-account. (Jakub Adam)
	  (half of #13180)
	* Fix purple-url-handler being unable to find an account.
	* media: Allow adding/removing streams on the fly. (Jakub Adam)
	  (half of #13535)
	* Support new connection states in NetworkManager 0.9. (Dan Williams)
	  (#13505)
	* When removing a buddy, delete the pounces associated with it.
	  (Kartik Mohta) (#1131)
	* media: Allow libpurple and plugins to set SDES properties for RTP
	  conferences. (Jakub Adam) (#12981)
	* proxy: Add new "Tor/Privacy" proxy type that can be used to
	  restrict operations that could leak potentially sensitive data
	  (e.g. DNS queries).  (#11110, #13928)

	AIM:
	* Fix setting icons with dimensions greater than 64x64 pixels by scaling
	  them down to at most 64x64. (#12874, #13165)

	Gadu-Gadu:
	* Allow showing your status only to buddies. (Mateusz Piękos) (#13358)
	* Updated internal libgadu to version 1.10.1. (Robert Matusewicz,
	  Krzysztof Klinikowski) (#13525)
	* Suppress blank messages that happen when receiving inline
	  images. (Tomasz Wasilczyk) (#13554)
	* Fix sending inline images to remote users, don't crash when
	  trying to send large (> 256kB) images. (Tomasz Wasilczyk) (#13580)
	* Support typing notifications. (Jan Zachorowski, Tomasz Wasilczyk,
	  Krzysztof Klinikowski) (#13362, #13590)
	* Require libgadu 1.10.1 to avoid using internal libgadu.